--- a/src/app/component/prestations/prestations.component.css
+++ b/src/app/component/prestations/prestations.component.css
@@ -59,3 +59,7 @@ body .ui-table .ui-table-tbody tr:nth-child(even).StatutS {
     padding-left:2px; padding-right:1px;
 }
 
+
+div.myFieldset .ui-fieldset .ui-fieldset-legend {
+    background-color:rgba(180,200,200,1);
+}
