--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -1,51 +1,4 @@
 <p-tabView>
-    <p-tabPanel header="Utilisateurs">
-        <p-toolbar>
-            <div class="ui-toolbar-group-left">
-                <button pButton type="button" label="Créer un utilisateur" icon="pi pi-fw pi-user-plus"
-                        class="ui-button-success" [routerLink]="['/register']"></button>
-            </div>
-        </p-toolbar>
-        <br>
-        <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
-                 columnResizeMode="expand" [responsive]="true" #tt [columns]="allUsersCols" [value]="allUsers"
-                 [paginator]="true" [rows]="10">
-
-            <!--    <ng-template pTemplate="caption">
-                    <div style="text-align:left">
-                        <p-multiSelect [options]="allUsersCols" [(ngModel)]="allUsers" optionLabel="header"
-                                       selectedItemsLabel="{0} columns selected" [style]="{minWidth: '200px'}"
-                                       defaultLabel="Choose Columns"></p-multiSelect>
-                    </div>
-                </ng-template>-->
-
-            <ng-template pTemplate="header" let-columns>
-                <tr>
-                    <th *ngFor="let col of columns">
-                        {{col}}
-                    </th>
-                </tr>
-
-            </ng-template>
-            <ng-template pTemplate="body" let-rowData let-columns="columns">
-                <tr [pSelectableRow]="rowData">
-
-                    <td *ngFor="let col of columns">
-                        <a *ngIf="col=='roles'"><a *ngFor="let obj of rowData[col]">{{obj.name}} </a></a>
-                        <a *ngIf="col!=='roles'">{{rowData[col]}}</a>
-                    </td>
-                    <td class="cta_collabs">
-                        <div class="ui-toolbar-group-right">
-                            <button pButton type="button" icon="pi pi-search"></button>
-                            <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
-                            <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
-                        </div>
-                    </td>
-                </tr>
-
-            </ng-template>
-        </p-table>
-    </p-tabPanel>
     <p-tabPanel header="Référentiels">
         <p-toolbar>
             <!--    <div class="ui-toolbar-group-right">
@@ -60,7 +13,7 @@
 
 
                 <p-fileUpload #fubauto #fileImportInput mode="basic" accept=".xlsx" customUpload="true"
-                              (uploadHandler)="Upload($event)" auto="true"
+                              (uploadHandler)="Upload($event)" (click)="loading()" auto="true"
                               chooseLabel="Importer les données de referentiel">
 
                 </p-fileUpload>
@@ -68,17 +21,17 @@
                 <button pButton [(disabled)]="resetRef" type="button" label="Importer toutes les tables"
                         icon="pi pi-upload"
                         class="ui-button-success" (click)="saveAllRefTable(alltable)"></button>
-                <div class="ui-toolbar-group-right" style="margin: 2px" [style.visibility]="loaderImport ? 'visible' : 'hidden'">
-                    <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8"
-                                       animationDuration=".5s"></p-progressSpinner>
-                </div>
+
                 <button pButton  type="button" label="Effacer toutes les tables"
                         icon="pi pi-upload"
                         class="ui-button-danger" (click)="cleanAllTable()">
                 </button>
-                <div class="ui-toolbar-group-right" style="margin: 2px" [style.visibility]="clearRef ? 'visible' : 'hidden'">
-                    <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8"
-                                       animationDuration=".5s"></p-progressSpinner>
+
+                <div class="ui-toolbar-group-right" style="margin: 2px" [style.display]="loaderImport ? 'block' : 'none'">
+                    <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8" animationDuration=".5s"></p-progressSpinner>
+                </div>
+                <div class="ui-toolbar-group-right" style="margin: 2px" [style.display]="clearRef ? 'block' : 'none'">
+                    <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8" animationDuration=".5s"></p-progressSpinner>
                 </div>
             </div>
         </p-toolbar>
@@ -135,6 +88,54 @@
 
         </p-accordion>
     </p-tabPanel>
+    <p-tabPanel header="Utilisateurs">
+        <p-toolbar>
+            <div class="ui-toolbar-group-left">
+                <button pButton type="button" label="Créer un utilisateur" icon="pi pi-fw pi-user-plus"
+                        class="ui-button-success" [routerLink]="['/register']"></button>
+            </div>
+        </p-toolbar>
+        <br>
+        <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
+                 columnResizeMode="expand" [responsive]="true" #tt [columns]="allUsersCols" [value]="allUsers"
+                 [paginator]="true" [rows]="10">
+
+            <!--    <ng-template pTemplate="caption">
+                    <div style="text-align:left">
+                        <p-multiSelect [options]="allUsersCols" [(ngModel)]="allUsers" optionLabel="header"
+                                       selectedItemsLabel="{0} columns selected" [style]="{minWidth: '200px'}"
+                                       defaultLabel="Choose Columns"></p-multiSelect>
+                    </div>
+                </ng-template>-->
+
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                    <th *ngFor="let col of columns">
+                        {{col}}
+                    </th>
+                </tr>
+
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+
+                    <td *ngFor="let col of columns">
+                        <a *ngIf="col=='roles'"><a *ngFor="let obj of rowData[col]">{{obj.name}} </a></a>
+                        <a *ngIf="col!=='roles'">{{rowData[col]}}</a>
+                    </td>
+                    <td class="cta_collabs">
+                        <div class="ui-toolbar-group-right">
+                            <button pButton type="button" icon="pi pi-search"></button>
+                            <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
+                            <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+                        </div>
+                    </td>
+                </tr>
+
+            </ng-template>
+        </p-table>
+    </p-tabPanel>
+
 
 </p-tabView>
 
