--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -21,8 +21,9 @@
 
     <!-- HEADER -->
     <ng-template pTemplate="header" let-columns>
+
         <tr>
-            <th *ngFor="let col of columns">{{col.header}}</th>
+            <th *ngFor="let col of columns" [className]="'col'">{{col.header}}</th>
             <th style="border-top:none; background-color:#f5f5f5; width:140px"></th>
         </tr>
 
