--- a/src/app/component/prestations/prestations.component.css
+++ b/src/app/component/prestations/prestations.component.css
@@ -14,8 +14,7 @@ th input {    width: 100%;}
 
 
 p-calendar input {
-/*    display:inline-block;
-    width:100%;*/
+/*  width:100%;*/
     text-overflow: ellipsis;
 }
 
