--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -1,4 +1,4 @@
-<p-toolbar >
+<p-toolbar>
     <div class="ui-toolbar-group-left"><span style="font-size:1.5em; display:inline-block; padding-top: 3px ">Liste des collaborateurs</span></div>
     <!-- Btn New Collab -->
     <button pButton type="button" label="Nouveau collaborateur" icon="pi pi-plus" (click)="afficherLaSaisie($event)" style="float:right; margin:0px;"></button>
@@ -113,7 +113,7 @@
 
                     <span class="ui-inputgroup-addon" [ngStyle]="{'width':'25%', 'text-align':'left','background-color':'#f5fafb'}">{{colsIndex[field]}} :</span>
 
-                    <p-dropdown *ngSwitchCase="'categorisation'" [options]="categorisations" [(ngModel)]="selectedCollaborateur[field]" filter="true" [style]="{'width':'100%'}">
+                    <p-dropdown *ngSwitchCase="'categorisation'" [options]="references['categorisations']" [(ngModel)]="selectedCollaborateur[field]" filter="true" [style]="{'width':'100%'}">
                          <ng-template let-item pTemplate="selectedItem">
                              <span>{{item.label}}</span>
                          </ng-template>
