--- a/src/app/component/prestations/prestations.component.css
+++ b/src/app/component/prestations/prestations.component.css
@@ -13,10 +13,7 @@ th input {    width: 100%;}
 }
 
 
-p-calendar input {
-/*  width:100%;*/
-    text-overflow: ellipsis;
-}
+p-calendar input {text-overflow: ellipsis; /*  width:100%;*/ }
 
 
 tr.StatutE td {                 background-color : rgba(250,255,250,0.5); }
@@ -38,3 +35,4 @@ tr:nth-child(even).StatutS td { background-color : rgba(220,200,200,0.5); }
 div.myFieldset .ui-fieldset .ui-fieldset-legend {
     background-color:rgba(180,200,200,1);
 }
+
