--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -1,8 +1,3 @@
-<style>
-    .ui-calendar {
-        width: 100%;
-    }
-</style>
 <p-toolbar>
     <div class="ui-toolbar-group-left"><span style="font-size:1.5em; display:inline-block; padding-top: 3px ">Liste des prestations {{employee_name}}</span></div>
 
@@ -35,16 +30,16 @@
     <ng-template pTemplate="header" let-columns>
 
         <tr>
-            <th *ngFor="let col of columns" [className]="'col'+filtres[col.field].filtertype">{{col.header}}</th>
+            <th *ngFor="let col of columns" [className]="'col'+coldefs[col.field].filtertype">{{col.header}}</th>
             <th style="border-top:none; border-bottom:none; background-color:#f5f5f5; width:140px"></th>
         </tr>
 
 
         <!-- FILTRES -->
         <tr>
-            <th *ngFor="let col of columns" [ngSwitch]="filtres[col.field].filtertype">
-                <p-multiSelect *ngSwitchCase="'liste'" defaultLabel="Sélectionnez" [options]="filtres[col.field].values"
-                               [(ngModel)]="filtres[col.field].selected"
+            <th *ngFor="let col of columns" [ngSwitch]="coldefs[col.field].filtertype">
+                <p-multiSelect *ngSwitchCase="'liste'" defaultLabel="Sélectionnez" [options]="coldefs[col.field].filter.values"
+                               [(ngModel)]="coldefs[col.field].filter.selected"
                                [style]="{'max-width':'100%', 'min-width':'auto'}"
                                [panelStyle]="{'min-width':'140px'}"
                                (onChange)="pt.filter($event.value, col.field, 'in')"
@@ -53,7 +48,7 @@
                 </p-multiSelect>
 
                 <div *ngSwitchCase="'date'" [ngStyle]="{'padding-right':'2em'}">
-                    <p-calendar [(ngModel)]="filtres[col.field].selected" [showIcon]="true" [showButtonBar]="true"
+                    <p-calendar [(ngModel)]="coldefs[col.field].filter.selected" [showIcon]="true" [showButtonBar]="true"
                                 dateFormat="{{datefmtCalendarInput}}" [locale]="fr" (onSelect)="pt_filter($event, pt, col.field);"
                                 (onClearClick)="pt_filter($event, pt, col.field);"
                                 [monthNavigator]="true" [yearNavigator]="true" yearRange="2000:2030" [selectOtherMonths]="true"
@@ -93,7 +88,7 @@
         <tr [pSelectableRow]="rowData" [className]="'Statut'+rowData['statutPrestation']">
 
             <!-- DataRows -->
-            <td *ngFor="let col of columns" [ngSwitch]="filtres[col.field].filtertype">
+            <td *ngFor="let col of columns" [ngSwitch]="coldefs[col.field].filtertype">
                 <span *ngSwitchCase="'date'">{{rowData[col.field] | date:datefmt }}</span>
                 <span *ngSwitchDefault>{{rowData[col.field]}}</span>
             </td>
@@ -129,7 +124,7 @@
             <div *ngIf="fiche.grp == 'contrat' || fiche.grp == 'collaborateur' || fiche.grp == 'commercialOpenInfo'">
                 <div *ngFor="let field of fiche.fields" class="ui-inputgroup" [ngSwitch]="field.type">
 
-                    <span class="ui-inputgroup-addon" [ngStyle]="{'width':'25%','text-align':'left','background-color':'#f5fafb'}">{{colsIndex[field.name]}}&nbsp;:</span>
+                    <span class="ui-inputgroup-addon" [ngStyle]="{'width':'25%','text-align':'left','background-color':'#f5fafb'}">{{coldefs[field.name].header}}&nbsp;:</span>
 
                     <p-calendar *ngSwitchCase="'date'" [(ngModel)]="selectedPrestation[fiche.grp][field.name]" [showIcon]="true" [showButtonBar]="true"
                                 dateFormat="dd/mm/yy" [locale]="fr" [inputStyle]="{}" [style]="{'display':'inline-block'}">
@@ -153,7 +148,7 @@
             <div *ngIf="fiche.grp == 'Prestation'">
                 <div *ngFor="let field of fiche.fields" class="ui-inputgroup" [ngSwitch]="field.type">
                     
-                    <span class="ui-inputgroup-addon" [ngStyle]="{'width':'25%','text-align':'left','background-color':'#f5fafb'}">{{colsIndex[field.name]}}&nbsp;:</span>
+                    <span class="ui-inputgroup-addon" [ngStyle]="{'width':'25%','text-align':'left','background-color':'#f5fafb'}">{{coldefs[field.name].header}}&nbsp;:</span>
 
                     <p-calendar *ngSwitchCase="'date'" [(ngModel)]="selectedPrestation[field.name]" [showIcon]="true" [showButtonBar]="true"
                                 dateFormat="dd/mm/yy" [locale]="fr" [inputStyle]="{}" [style]="{'display':'inline-block'}">
